Fixed button spacing issue in model component

--- a/src/components/Modals/SimpleModal/style.scss
+++ b/src/components/Modals/SimpleModal/style.scss
@@ -64,7 +64,7 @@
     transition: all 0.5s;
     margin-top:-4px;
     font-weight:700;
-    max-width: 200px;
+    max-width: 250px;
     padding: 1.7rem;
 
 
